Pull up following revision(s) (requested by jmmv in ticket #1551): 	sys/arch/powerpc/powerpc/sig_machdep.c: revision 1.39 via patch PR port-macppc/43619 Save handler before calling sendsig_reset before it will reset to SIG_DFL is SA_RESETHAND is set.